GC changes up to section 4D

--- a/document/source/abstract.tex
+++ b/document/source/abstract.tex
@@ -1,4 +1,4 @@
-Safety and mission performance validation of autonomous vehicles is a major challenge. We describe a methodology for constructing and applying assertion checks, operating in simulation or in the real world. 
+Safety and mission performance validation of autonomous vehicles is a major challenge. We describe a methodology for constructing and applying assertion checks, operating in simulation or in the real world, through the use of an assertion-based oracle. 
 %
 An assertion library has been derived from the UK Highway Code (UKHC), as an example of a legal code of practice. 
 %
